# xmss-riscv

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  plan.md
.claude/: settings.json
.claude/hooks/: jasmin_check.sh
.github/workflows/: ci.yml  riscv.yml
doc/: plan_bds_serialization.md  plan_xmssmt.md
impl/c/: CLAUDE.md  CMakeLists.txt  Makefile  README.md
impl/c/cmake/: toolchain-riscv64.cmake
impl/c/include/xmss/: types.h  xmss.h
impl/c/src/: address.c  address.h  bds.c  bds.h  ltree.h  params.c  treehash.h  utils.c  utils.h  wots.c  xmss.c  xmss_mt.c
impl/c/src/hash/: hash_iface.h  xmss_hash.c
impl/c/test/: CMakeLists.txt  gen_acvp_vectors.py  test_bds.c  test_hash.c  test_kat.c  test_params.c  test_utils_internal.c  test_wots.c  test_xmss.c  test_xmss_acvp_kat.c  test_xmss_kat.c  test_xmss_mt.c  test_xmss_mt_kat.c  test_xmss_mt_params.c  xmss_acvp_vectors.h
impl/jasmin/: CLAUDE.md  jasmin-reference.md
impl/rust/: CLAUDE.md
include/xmss/: params.h  types.h  xmss.h
isa/: README.md
isa/binaries/: .gitkeep  test_address  test_bds  test_bds_serial  test_hash  test_params  test_utils_internal  test_wots  test_xmss  test_xmss_kat  test_xmss_mt  test_xmss_mt_kat  test_xmss_mt_params
isa/reports/: .gitkeep  .report-todo.md  CLAUDE.md  xmss_rv64_isa_profile.md  xmss_rv64_isa_profile.tex  zbb_comparison.md
isa/scripts/: analyse.sh  compare_zbb.sh  gen_lookup.sh
proofs/: CLAUDE.md  treehash-equivalence.md  treehash-equivalence.tex
src/: address.c  bds.c  bds.h  bds_serialize.c  ltree.c  params.c  sk_offsets.h  treehash.c  treehash.h  utils.c  wots.c  wots.h  xmss.c  xmssmt.c
src/hash/: hash_iface.h  sha2_local.c  sha2_local.h  shake_local.c  shake_local.h  xmss_hash.c
test/: CMakeLists.txt  test_address.c  test_bds.c  test_bds_serial.c  test_hash.c  test_kat.c  test_params.c  test_utils.h  test_utils_internal.c  test_xmss.c  test_xmss_mt.c  test_xmssmt.c  test_xmssmt_params.c
